no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -277,8 +277,12 @@ TYPE[]                            #Child of TS_TYPE, type 'TSArrayType':
                                   #  - typeAnnotation TS_TYPE
                                   #for [...ARR_TYPE]
 
-[TYPE[?],...]                     #Child of TS_TYPE, type 'TSTupleType':
+[TYPE[?][: VAR],...]              #Child of TS_TYPE, type 'TSTupleType':
                                   #  - elementTypes TS_TYPE_ARR
+                                  #Element with :VAR is child of TS_TYPE, type 'TSNamedTupleMember':
+                                  #  - elementType TS_TYPE
+                                  #  - label IDENTIFIER
+                                  #  - optional BOOL
 
 
                                              /=+===============================+=\
