--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -575,7 +575,7 @@ Array<TYPE>                       #Type of ARR of same TYPEs
 
 [TYPE[?][: VAR],...]              #Type of ARR of different TYPEs ("tuple").
                                   #Each TYPE is only for that index.
-                                  #If named (VAR), all must be named. Name not used for type checking.
+                                  #If named (VAR), all must be named. Name only for description, not used for type checking.
                                   #No missing value unless '?'
                                   #No additional values.
 
