--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #7.4.0 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
+VERSION ==>                       #8.0.1
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -62,7 +62,7 @@ ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
                                   #  - pos NUM (offset)
                                   #  - loc.line|column NUM
                                   #OPTS:
-                                  #  - ecmaVersion 3|5, 6-11 or 2015-2020 (def: 2019)
+                                  #  - ecmaVersion 3|5, 6-11 or 2015-2021 (required)
                                   #  - sourceType 'script|module' (def: 'script')
                                   #  - allowReturnOutsideFunction BOOL (def: false): top-level return
                                   #  - allowAwaitOutsideFunction BOOL (def: false): top-level await
