no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -57,7 +57,7 @@ import "IMPORT_PATH"              #"IMPORT_PATH" locates the PACKAGE on the file
                                   #Relative to:
                                   #  - GOROOT/src: for standard library
                                   #  (if module-aware, and URI)
-                                  #  - GOPATH/pkg/mod
+                                  #  - GOMODCACHE
                                   #  (if non-module-aware)
                                   #  - GOPATH/src
                                   #  (if non-module-aware, and start with . or ..)
@@ -90,6 +90,8 @@ ENVVAR GOBIN                      #Userland binaries directory
                                   #Should add both GOBIN and GOROOT/bin to $PATH
                                   #Must be absolute
                                   #Def: GOPATH/bin
+ENVVAR GOMODCACHE                 #If module-aware, where URI-downloaded PACKAGEs are located
+                                  #Def: GOPATH/pkg/mod
 BINARY INSTALLATION ==>           #During go install:
                                   #  - if main PACKAGE
                                   #  - moved to GOBIN/BINARY
@@ -414,7 +416,7 @@ go get IMPORT_PATHS               #Automatically run by go build|test|list
                                   #If module-aware:
                                   #  - Fetch module over the network
                                   #  - Retrieve vMODULE_VERSION
-                                  #  - Copy source locally to GOPATH/pkg/mod/IMPORT_PATH@vMODULE_VERSION
+                                  #  - Copy source locally to GOMODCACHE/IMPORT_PATH@vMODULE_VERSION
                                   #If non-module-aware:
                                   #  - Take local source from GOPATH/src/IMPORT_PATH
                                   #  - Build binaries to GOPATH/pkg/GOOS_GOARCH/IMPORT_PATH/*.a
@@ -453,7 +455,9 @@ ENVVAR GOPROXY                    #Proxies MODULEs downloads ("module proxy").
                                   #  - filesystem PATH
                                   #  - "direct": no proxy
                                   #  - "off": disallow any download
-                                  #Can be ,-separated list
+                                  #Can be ,-separated or |-separated list
+                                  #  - ,: tries next on 404|410
+                                  #  - |: tries next on any 4**|5**
                                   #Default: "https://proxy.golang.org,direct"
                                   #GOPROXY/MODULE_PATH/:
                                   #  - @v:
@@ -691,7 +695,7 @@ go clean IMPORT_PATHS             #Remove temporary files
 -i                                #Remove BINARY built with go build|test
 -cache                            #Remove GOCACHE directory
 -testcache                        #Same but only tests
--modcache                         #Remove package downloads cache (GOPATH/pkg/mod)
+-modcache                         #Remove package downloads cache (GOMODCACHE)
 -ANY_GO_BUILD_FLAG                #
 
 -r                                #On dependencies too
@@ -780,8 +784,10 @@ unreachable                       #Unreachable code
 assign                            #Useless assignments like VAR = VAR
 bools                             #Common mistakes with BOOL
 shift                             #Wrong << >>
+stringintconv                     #string(NUM) except string(BYTE|RUNE)
 loopclosure                       #Closure of goroutine|deferred FUNC inside a for loop, use VAR iterated by that for loop
 nilfunc                           #FUNC == nil (might have meant FUNC() == nil)
+ifaceassert                       #INTERFACE.(TYPE) known to always fail
 unsafeptr                         #Invalid conversions with uintptr|unsafe.Pointer
 
 composites                        #Positional arguments to an inline STRUCT from a different PACKAGE
