--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -34,7 +34,7 @@ go test [IMPORT_PATHS] [ARG...]   #Runs:
                                   #  - convention to disable caching: using -count=1
 -vet=RULE,...                     #Which go vet RULEs are run.
                                   #Can be "off"
-                                  #Def: only bools|nilfunc|atomic|printf|buildtag
+                                  #Def: only bools|stringintconv|nilfunc|ifaceassert|atomic|printf|buildtag
 -c                                #Do not execute TEST_BINARY
 -o PATH                           #TEST_BINARY's location.
                                   #Def: BINARY.test
