no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -5,6 +5,8 @@
 
 
 
+VERSION ==>                       #3.3.13
+
 ALTERNATIVES ==>                  #  - jscpd (prefered): multi-languages
                                   #  - jsinspect: JavaScript-only, does not always work correctly
                                   #  - synt: less options, TypeScript-oriented, less popular
@@ -82,10 +84,10 @@ CONF.minTokens                    #Duplication must be at least NUM tokens long 
                                   #Def: 50
                                   #Note: tokens include small things like . ; ( ) { }
 CONF.min|maxLines                 #Do not report if file is less|more than NUM lines long
-                                  #Def: 5|500
+                                  #Def: 5|1000
                                   #0 means infinite
 CONF.maxSize                      #Do not report if file is more than STR bytes long (uses bytes, see its doc)
-                                  #Def: '30kb'
+                                  #Def: '100kb'
 CONF.threshold                    #NUM (0-100). Def: none
                                   #Exit code of 1 if duplicated lines percentage is above NUM
 CONF.mode                         #Can be:
@@ -125,9 +127,9 @@ JSCPD-BADGE-REPORTER ==>         ##Creates a badge with duplication percentage
                                              \=+===============================+=/
 
 
-jspcd FILE|DIR...                 #As CLI
-                                  #No globbing
-                                  #Version 3.3.3
+jspcd [FILE|DIR...]               #As CLI
+                                  #Def FILE|DIR: .
+CONF.pattern                      #'GLOB' appended to any DIR (def: '**/*')
 
 
                                              /=+===============================+=\
@@ -140,7 +142,7 @@ jspcd FILE|DIR...                 #As CLI
 jscpd('ARG'_ARR)
  ->PROMISE_CLONE_ARR              #Simpler API, to prefer
 
-@jscpd/core                       #Version 3.3.1
+@jscpd/core                       #
 new Statistic([CONF])             #STATISTIC. Aggregates detection stats state
 
 new Detector(TOKENIZER, STORE,
@@ -159,13 +161,13 @@ DUP.blame.rev|author|date|line    #STR
 
 new MemoryStore()                 #STORE
 
-@jscpd/leveldb-store              #Version 3.3.1
+@jscpd/leveldb-store              #
 new LevelDbStore()                #STORE
 
-@jscpd/redis-store                #Version 3.3.1
+@jscpd/redis-store                #
 new RedisStore()                  #STORE
 
-@jscpd/tokenizer                  #Version 3.3.1
+@jscpd/tokenizer                  #
 new Tokenizer()                   #
 TOKENIZER.generateMaps
  ('ID', 'SOURCE', 'FORMAT'[,CONF])
@@ -175,7 +177,7 @@ TOKEN.type                        #STR
 TOKEN.content                     #STR
 TOKEN.length                      #NUM
 
-@jscpd/finder                     #Version 3.3.3
+@jscpd/finder                     #
 getFilesToDetect([CONF])->FILE_ARR#Retrieve list of files to check after applying
                                   #CONF.path|ignore|absolute|noSymlinks|format|formatExts|maxSize|minLines|maxLines
 FILE.path                         #STR
