no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -141,6 +141,9 @@ new AsyncResource('RESOURCE_TYPE'[, OPTS])      #Custom RESOURCE
                                                 #    is garbage collected
 ASYNCRESOURCE.runInAsyncScope
  (FUNC[, THIS][, ...ARGS])                      #This is automatically create a new TASK_ID and call 'before|after' events
+ASYNCRESOURCE.bind(FUNC)->FUNC2              14*#Like ASYNCRESOURCE.runInAsyncScope.bind(FUNC)
+AsyncResource.bind(FUNC[, 'RESOURCE_TYPE'])  14*#Like (new AsyncResource('RESOURCE_TYPE')).bind(FUNC)
+ ->FUNC2                                     14*#Def 'RESOURCE_TYPE': 'bound-anonymous-fn'
 ASYNCRESOURCE.emitDestroy()                     #
 ASYNCRESOURCE.asyncId()->TASK_ID                #
 ASYNCRESOURCE.triggerId()->PARENT_TASK_ID       #
