no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -184,26 +184,25 @@ ACORN.Parser                      #PARSER. Same as ACORN, except with additional
 PARSER.acorn                      #ACORN
 PARSER.extend(PLUGIN...)          #
 
-ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: class-fields, private-class-*,
-                                 ##static-class-features, numeric-separator, logical-assignment
-                                 ##Version 3.0.0
+ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: class-fields, private-methods, static-class-features
+                                 ##Version 4.0.0
 
 ACORN-CLASS-FIELDS               ##PLUGIN for class { VAR [= VAL] }
-                                 ##Version 0.3.6
+                                 ##Version 0.3.7
 ACORN-PRIVATE-CLASS-ELEMENTS     ##PLUGIN for class { #VAR }
                                  ##New token type: privateName
-                                 ##Version 0.2.6
+                                 ##Version 0.2.7
 ACORN-PRIVATE-METHODS            ##PLUGIN for class { #FUNC() }
                                  ##New token type: privateName
-                                 ##Version 0.3.2
+                                 ##Version 0.3.3
 ACORN-STATIC-CLASS-FEATURES      ##PLUGIN for class { static VAR [= VAL] }
-                                 ##Version 0.2.3
+                                 ##Version 0.2.4
 
 ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
-                                 ##Version 0.3.3
+                                 ##Version 0.3.6
 
 ACORN-LOGICAL-ASSIGNMENT         ##PLUGIN for ||= &&= ??=
-                                 ##Version 0.1.3
+                                 ##Version 0.1.4
 
 ACORN-JSX()                      ##PLUGIN for JSX (see JSX AST doc)
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
