--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.6.0
+VERSION ==>                       #7.7.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1102,6 +1102,7 @@ no-underscore-dangle [OBJ]        #Avoid naming _VAR
                                   #  - allowAfterThis BOOL (def: false): ignore for this._VAR
                                   #  - allowAfterThisConstructor BOOL (def: false): ignore for this.constructor._VAR
                                   #  - allowAfterSuper BOOL (def: false): ignore for super._VAR
+                                  #  - allowFunctionParams BOOL (def: false): ignore in args
                                   #  - enforceInMethodNames BOOL: if false (def), ignore for class methods
 unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable names.
  [OBJ]                           ##Does it against a hard-coded list of common abbreviations.
