no commit message

--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -353,11 +353,11 @@ MEM_STATS.DebugGC BOOL            #Always false
                                              \=+===============================+=/
 
 
-gofmt|go test -cpuprofile FILE    #Does CPU profiling and outputs it in FILE
+gofmt|go test -cpuprofile CPUPROF #Does CPU profiling and outputs it in CPUPROF
                                   #CPU profiling shows duration spent in each function, as a call tree
                                   #Do it by using random samples, recording at regular interval which source line was hit
                                   #  - including parents
-                                  #     - whole function stack is a "node", composed of several "frames"
+                                  #     - whole call stack is a "node", composed of several stack "frames"
                                   #  - instrument each source line to know this
 
 import "runtime/pprof"            #
@@ -365,13 +365,21 @@ pprof.StartCPUProfile(WRITER)
  ->ERROR|nil                      #Starts CPU profiling
 pprof.StopCPUProfile()            #Stops CPU profiling, and write output to WRITER
 
-go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
-                                  #BIN is the binary that produced the profiling FILE, to find out source code
+go tool pprof [FORMAT] [BIN]      #Inspect a CPUPROF
+ CPUPROF                          #BIN is the binary that produced CPUPROF, to find out source code
                                   #  - automatically guessed
                                   #Def FORMAT: interactive mode
 
--http=HOST:PORT                   #Visualize all information, in browser
--kcachegrind                      #Visualize all information, in kcachegrind program
+-http=HOST:PORT                   #Visualize all graphs, in browser
+                                  #  - -web, -list, -tree
+                                  #  - -show|hide|focus|ignore|show_from|prune_from
+                                  #  - also flame graph
+                                  #But not:
+                                  #  - -traces, -raw
+                                  #  - other filtering|configuration options
+-no_browser                       #Do not automatically open browser
+
+-kcachegrind                      #Visualize all graphs, in kcachegrind program
 
 -web                              #Visualize graph through web browser
 -evince                           #Visualize graph through evince program
@@ -385,11 +393,11 @@ go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
 -ps                               #Output graph as PostScript
 -gif                              #Output graph as GIF
 -dot                              #Output as DOT graph
--callgrind                        #Outputs in callgrind format
+-callgrind                        #Output in callgrind format
 -proto                            #Output as protobuf
 
 -list=REGEXP                      #Prints source code of functions whose name match REGEXP, with duration of each line in left margin
--weblist                          #Same but visualized in browser
+-weblist=REGEXP                   #Same but visualized in browser
 
 -tree                             #Print all functions with:
                                   #  - both CPU duration, and number of samples|calls
@@ -398,6 +406,8 @@ go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
 -peek=REGEXP                      #Same as -tree but only functions whose name match REGEXP
 -text|-top                        #Like -tree but for the top entries
 -topproto                         #Like -top but as protobuf
+-compact_labels                   #In -tree (and similar), do not show header
+-cum|flat                         #In -tree (and similar), sort by cum|flat duration (def: flat)
 
 -traces                           #Prints list of samples:
                                   #  - time duration
@@ -407,10 +417,16 @@ go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
                                   #  - time interval
                                   #  - which line of code was hit
 
--comments                         #Print profile comments
--tags                             #Print profile tags
+-addresses|filefunctions|files|   #How nodes are grouped:
+ functions|lines                  #  - files
+                                  #  - functions (def)
+                                  #  - line of code
+                                  #  - memory address
 
 -nodecount=NUM                    #Only show top NUM nodes
+-nodefraction=0-1                 #Only show nodes with >=NUM% of total duration
+-edgefraction=0-1                 #Same but still show those nodes, but outside the main graph
+-trim                             #Use some auto -nodecount|nodefraction|edgefraction
 
 -show|hide=REGEXP                 #Show|hide frames matching regexp
                                   #Parent|children frames are still shown (unless those are all hidden)
@@ -418,82 +434,43 @@ go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
 -show_from|prune_from=REGEXP      #Like -hide but for all frames above|below functions matching REGEXP
 -noinlines                        #Like -hide but for functions inlined by compiler
 
+-sample_index=0                   #Show number of samples instead of CPU duration
 -unit=UNIT                        #CPU duration unit among: year|month|day|second|millisecond|microsecond|nanosecond
                                   #Def: millisecond
 -divide_by=NUM                    #Divide all CPU durations by NUM
+-relative_percentages             #Percentage duration relative only to shown nodes, not to total duration
+-mean                             #Show the same mean CPU duration on all nodes
 
-  Options:
-    -trim            Honor nodefraction/edgefraction/nodecount defaults
-    -edgefraction    Hide edges below <f>*total
-    -nodefraction    Hide nodes below <f>*total
+-diff_base=CPUPROF2               #Show difference between two CPUPROFs
+-base=CPUPROF2                    #Same as -diff_base, but the percentage is based on CPUPROF2, not CPUPROF
+-normalize                        #Same as -diff_base, but show full graph
+                                  #Together with -base=CPUPROF2
+-drop_negative                    #Remove nodes with negative durations
 
-    -call_tree       Create a context-sensitive call tree
-    -compact_labels  Show minimal headers
-    -drop_negative   Ignore negative differences
-    -mean            Average sample value over first value (count)
-    -normalize       Scales profile based on the base profile.
-    -relative_percentages Show percentages relative to focused subgraph
-    -sample_index    Sample value to report (0-based index or name)
-    -source_path     Search path for source files
-    -tagfocus        Restricts to samples with tags in range or matched by regexp
-    -taghide         Skip tags matching this regexp
-    -tagignore       Discard samples with tags in range or matched by regexp
-    -tagshow         Only consider tags matching this regexp
-    -trim_path       Path to trim from source paths before search
+-call_tree                        #Create a more precise call tree graph, including when functions are called through pointers
+-symbolize=STR                    #How variable names are retrieved, among:
+                                  #  - none
+                                  #  - local (def)
+                                  #  - fastlocal: only function names
+                                  #  - remote: only remote binaries
+                                  #  - force
+-tls_cert|tls_key|tls_ca          #TLS information when using remote CPUPROF
 
-  Option groups (only set one per group):
-    cumulative
-      -cum             Sort entries based on cumulative weight
-      -flat            Sort entries based on own weight
-    granularity
-      -addresses       Aggregate at the address level.
-      -filefunctions   Aggregate at the function level.
-      -files           Aggregate at the file level.
-      -functions       Aggregate at the function level.
-      -lines           Aggregate at the source code line level.
+-tags                             #Print profile tags
+                                  #I don't know how to set those
+-tagshow|hide|focus|ignore=REGEXP #Like -show|hide|focus|ignore but for profile tags
 
-  Source options:
-    -seconds              Duration for time-based profile collection
-    -timeout              Timeout in seconds for profile collection
-    -buildid              Override build id for main binary
-    -add_comment          Free-form annotation to add to the profile
-                          Displayed on some reports or with pprof -comments
-    -diff_base source     Source of base profile for comparison
-    -base source          Source of base profile for profile subtraction
-    profile.pb.gz         Profile in compressed protobuf format
-    legacy_profile        Profile in legacy pprof format
-    http://host/profile   URL for profile handler to retrieve
-    -symbolize=           Controls source of symbol information
-      none                  Do not attempt symbolization
-      local                 Examine only local binaries
-      fastlocal             Only get function names from local binaries
-      remote                Do not examine local binaries
-      force                 Force re-symbolization
-    Binary                  Local path or build id of binary for symbolization
-    -tls_cert             TLS client certificate file for fetching profile and symbols
-    -tls_key              TLS private key file for fetching profile and symbols
-    -tls_ca               TLS CA certs file for fetching profile and symbols
+-comments                         #Print profile comments
+-add_comment=STR                  #Add a profile comment, only temporarily
 
-  Misc options:
-   -http              Provide web interface at host:port.
-                      Host is optional and 'localhost' by default.
-                      Port is optional and a randomly available port by default.
-   -no_browser        Skip opening a browser for the interactive web UI.
-   -tools             Search path for object tools
+-buildid=ID                       #Specify build ID, printed in some graphs
 
-  Legacy convenience options:
-   -inuse_space           Same as -sample_index=inuse_space
-   -inuse_objects         Same as -sample_index=inuse_objects
-   -alloc_space           Same as -sample_index=alloc_space
-   -alloc_objects         Same as -sample_index=alloc_objects
-   -total_delay           Same as -sample_index=delay
-   -contentions           Same as -sample_index=contentions
-   -mean_delay            Same as -mean -sample_index=delay
+-seconds|timeout=NUM              #Duration|timeout for time-based profile collection (I don't know what those are)
 
-  Environment Variables:
-   PPROF_TMPDIR       Location for saved profiles (default $HOME/pprof)
-   PPROF_TOOLS        Search path for object-level tools
-   PPROF_BINARY_PATH  Search path for local binary files
-                      default: $HOME/pprof/binaries
-                      searches $name, $path, $buildid/$name, $path/$buildid
-   * On Windows, %USERPROFILE% is used instead of $HOME
+-source_path=PATH                 #Source file path. Allows retrieving source lines.
+-trim_path=DIR                    #Do not show source lines of DIR from source lines
+
+ENVVAR PPROF_BINARY_PATH          #Def: ~/pprof/binaries
+ENVVAR PPROF_TMPDIR               #Def: ~/pprof
+ENVVAR PPROF_TOOLS
+-tools=DIR                        #DIR where go tool is located
