no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -7,9 +7,11 @@
 TODO:
   - commands:
      - profiling:
-        - https://golang.org/cmd/go/#hdr-Testing_flags
         - https://golang.org/pkg/runtime/pprof
         - https://blog.golang.org/pprof
+        - https://golang.org/doc/diagnostics.html
+     - tracing:
+        - https://golang.org/pkg/runtime/trace/
      - go test:
         - https://golang.org/pkg/runtime/
         - go tool pprof
@@ -43,8 +45,6 @@ TODO:
      - after time package
         - https://github.com/golang/go/wiki/Timeouts
         - https://github.com/golang/go/wiki/RateLimiting
-  - https://golang.org/doc/diagnostics.html
-     - redocument gofmt -cpuprofile flag
   - https://github.com/golang?type=source
   - add VSCode shortcuts
   - go through to_learn.txt
