no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,6 +6,11 @@
 
 TODO:
   - commands:
+     - profiling:
+        - go tool pprof -help
+        - https://golang.org/cmd/go/#hdr-Testing_flags
+        - https://golang.org/pkg/runtime/pprof
+        - https://blog.golang.org/pprof
      - go test:
         - https://golang.org/pkg/runtime/
         - go tool pprof
