no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -137,6 +137,9 @@ jspcd FILE|DIR...                 #As CLI
                                              \=+===============================+=/
 
 
+jscpd('ARG'_ARR)
+ ->PROMISE_CLONE_ARR              #Simpler API, to prefer
+
 @jscpd/core                       #Version 3.3.1
 new Statistic([CONF])             #STATISTIC. Aggregates detection stats state
 
