no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -224,8 +224,9 @@ yield [*] [VAL]                   #Child of EXPR, type 'YieldExpression':
                                   #  - [argument EXPR]
                                   #  - delegate BOOL (if *)
 
-await VAL                         #Child of EXPRT, type 'AwaitExpression':
+await VAL                         #Child of EXPR, type 'AwaitExpression':
                                   #  - argument EXPR
+await.all|any|race|allSettled VAL*#  - [operation IDENTIFIER]
 
 FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
