no commit message

--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -31,3 +31,5 @@ runtime.GOMAXPROCS(0)->INT2       #Max number of goroutines running in parallel
 runtime.GOMAXPROCS(INT)->INT2     #Sets it, and returns the previous one
 ENVVAR GOMAXPROCS                 #Default value for runtime.GOMAXPROCS.
                                   #Def: runtime.NumCPU()
+
+runtime.NumGoroutine()->INT       #Number of running goroutines
