--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -273,6 +273,7 @@ gofmt|go test                     #CLI usage. Preferred
 import "runtime[/pprof]"          #Programmatic usage.
 
 PROFFILE                          #CPUPROF|MEMPROF|BLOCKPROF|MUTEXPROF
+                                  #Format is gzip protobuffer
 COUNT                             #Memory or duration, depending on profiling type
 
 -cpuprofile CPUPROF               #Does CPU profiling and outputs it in CPUPROF
@@ -281,11 +282,11 @@ COUNT                             #Memory or duration, depending on profiling ty
                                   #  - including parents
                                   #     - whole call stack is a "node", composed of several stack "frames"
                                   #  - instrument each source line to know this
--memprofile MEMPROF               #Same as CPU profiling, but profiling function's used heap memory instead of CPU duration
+-memprofile MEMPROF               #Same as CPU profiling, but profiling function's used cumulative heap memory instead of CPU duration
                                   #Instead of recording at regular interval, records at regular amount of memory allocated, during GCs
 -blockprofile BLOCKPROF           #Same as CPU profiling, but measuring how long goroutines waited on CHAN or sync.*
 -mutexprofile MUTEXPROF           #Same as GoroutineBlock profiling, but for mutexes waiting instead
-ALLOCS PROFILING ==>              #Like -memprofile, but cumulative memory
+HEAP PROFILING ==>                #Like -memprofile, but non-cumulative memory
                                   #Must use pprof.*
 GOROUTINE PROFILING ==>           #Profiles stack trace of all goroutines
                                   #Must use pprof.*
@@ -298,17 +299,23 @@ pprof.Profile                     #Abstract profiler.
                                   #  - created with runtime.*Profile()
                                   #  - with shape runtime.*ProfileRecord
                                   #Built-in TYPE:
-                                  #  - 'heap': like -memprofile
+                                  #  - 'allocs': like -memprofile
                                   #  - 'block': like -blockprofile
                                   #  - 'mutex': like -mutexprofile
-                                  #  - 'allocs'
+                                  #  - 'heap'
                                   #  - 'goroutine'
                                   #  - 'threadcreate'
                                   #CPU profiling uses pprof.*CPUProfile() instead
 pprof.Profiles()->[]*PROFILE
 pprof.Lookup('TYPE')->PROFILE     #Retrieve specific PROFILE
-PROFILE.name                      #'TYPE'
-PROFILE.Count()                   #Number of stack traces
+PROFILE.Name()->'TYPE'            #
+PROFILE.WriteTo(WRITER)->ERROR|nil#Serialize PROFILE in a PROFFILE format
+PROFILE.Count()->INT              #Retrieve profile-specific current COUNT
+PROFILE.Add(VAL, INT)             #Record the current stack trace (skipping INT frames) with key VAL
+PROFILE.Remove(VAL)               #
+
+NewProfile('TYPE')->*PROFILE      #Create a custom profiler
+                                  #Must add a count() and write() methods
 
 pprof.StartCPUProfile(WRITER)
  ->ERROR|nil                      #Starts CPU profiling
@@ -403,9 +410,9 @@ go tool pprof [FORMAT] [BIN]      #Inspect a PROFFILE
                                   #  (CPU profiling)
                                   #  - 0: number of samples
                                   #  (Memory profiling)
-                                  #  - alloc_space (def)
+                                  #  - alloc_space (def with allocs)
                                   #  - alloc_objects: number of objects instead of bytes
-                                  #  - inuse_space|inuse_objects: include memory spans too
+                                  #  - inuse_space (def with heap) or inuse_objects: include memory spans too
                                   #  (GoroutinesBlock|MutexBlock profiling)
                                   #  - delay (def): how long goroutine waited
                                   #  - 0|contentions: how many times goroutine waited
