--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -337,6 +337,21 @@ runtime.MemProfileRate            #If 0, disables memory profiling
 runtime.SetBlockProfileRate(INT)  #If 0, disables goroutinesBlock profiling
 runtime.SetMutexProfileRate(INT)  #Like BlockProfileRate but for mutex profiling
 
+LABEL                             #'LABEL=VALUE' key-value pair
+                                  #Arbitrary metadata added to profiling for filtering
+pprof.LabelSet                    #Set of LABELs
+pprof.Labels('LABEL','VALUE',...)
+ ->LABEL_SET                      #
+pprof.WithLabels
+ (CONTEXT, LABEL_SET)->CONTEXT2   #Add LABEL_SET to CONTEXT (using context.WithValue())
+pprof.Label(CONTEXT, 'LABEL')
+ ->'VALUE',OK                     #Retrieve a specific LABEL's 'VALUE'
+pprof.ForLabels(CONTEXT,
+ FUNC('LABEL', 'VALUE')->BOOL)    #Call FUNC() on each LABEL until BOOL is false
+pprof.SetGoroutineLabels(CONTEXT) #Make newly created child goroutines inherit current goroutine's LABELs
+pprof.Do(CONTEXT, LABEL_SET,
+ FUNC(CONTEXT2))                  #Combines WithLabels() and SetGoroutineLabels()
+
 go tool pprof [FORMAT] [BIN]      #Inspect a PROFFILE
  PROFFILE                         #BIN is the binary that produced PROFFILE, to find out source code
                                   #  - automatically guessed
